fix(plugins/plugin-client-common): Imports checkmarks are too tall
We have a `font-size: 1rem` css rule that causes non-aligned row content in the tree view.

--- a/plugins/plugin-client-common/web/scss/components/Wizard/Imports.scss
+++ b/plugins/plugin-client-common/web/scss/components/Wizard/Imports.scss
@@ -75,7 +75,6 @@
   .pf-c-badge.pf-m-unread {
     padding: 0;
     min-width: unset;
-    font-size: 1rem;
     background-color: transparent;
   }
 
